build: run project with docker compose

--- a/backend/Backend.API/appsettings.json
+++ b/backend/Backend.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=LeadsDB;User Id=sa;Password=oRe2J4ZabG2Y;TrustServerCertificate=True"
+    "DefaultConnection": "Server=host.docker.internal,1433;Database=LeadsDB;User Id=sa;Password=oRe2J4ZabG2Y;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
